# umbral

./: .gitignore  CITATION.cff  DEV_PLAN.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
data/: alignment_matrix.csv  contagion_links.csv  disruption_table.csv  factions.csv  gazette_config.json  gm_decision_table.csv  lever_effects.csv  outcome_bands.csv  people_table.csv  support_seed.csv
docs/: conf.py  index.md  mechanics.md  requirements.txt
examples/: session1_grades.csv  session1_programmes.csv
excel/: README.md
forms/: grades_columns.csv  programme_columns.csv  programme_form_schema.md
src/umbral/: __init__.py  alignment.py  cli.py  constants.py  diary.py  engine.py  grading.py  intake.py  models.py  reports.py  resolution.py  state.py  tipping.py
tests/: __init__.py  conftest.py  test_intake.py  test_resolution.py  test_tipping.py  test_worked_example.py
